# pg-logical-replication-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
infra/docker-pg-logical-replication/: docker-compose.yml
infra/docker-pg-logical-replication/image/: Dockerfile  build.sh
infra/docker-pg-logical-replication/image/docker-entrypoint-initdb.d/: 10-create-tables.sh  11-fill-data.sh
src/pg_logical_replication/: __init__.py  client.py  models.py
tests/: test_wal2json.py
